--- a/javascript1.html
+++ b/javascript1.html
@@ -34,7 +34,7 @@
 		let var5=1;
 		var5=null;
 
-		console.log(var1, var2, var3, var4, var5);
+		console.log(var1, var2, var3, var4, var5)
 	</script>
 </head>
 <body>
